--- a/local_presenton/.env.example
+++ b/local_presenton/.env.example
@@ -11,7 +11,7 @@ OPENAI_MODEL="deepseek/deepseek-v3.2"
 
 
 # *****
-# * Assume using pixabay -- https://pixabay.com/service/about/api/
+# * Assume using Pixabay -- https://pixabay.com/service/about/api/
 # *****
 
 
