--- a/local_presenton/.env.example
+++ b/local_presenton/.env.example
@@ -1,3 +1,11 @@
+# !!!!!!!!!!
+# !!!!!
+# !!! Set your secret keys here
+# !!! ... ***BUT*** note that Docker Desktop will see your secret keys and be able to display your secrets through its admin UI!!!
+# !!!!!
+# !!!!!!!!!!
+
+
 # *****
 # * Assume using OpenRouter -- https://openrouter.ai/
 # *****
